@@ -1,3 +1,9 @@
+serd (0.29.1) unstable;
+
+  * Support strict parsing of prefixed names
+
+ -- David Robillard <d@drobilla.net>  Sun, 30 Jul 2017 10:35:24 +0200
+
 serd (0.28.0) stable;
 
   * Add support for reading from a user provided callback
